[package]
name = "brew_book"
version = "0.1.0"
authors = ["Darren Picard <darren.picard@neofinancial.com>"]
edition = "2018"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
lambda_runtime = "^0.4.0"
lambda_http = "^0.4.0"
tokio = "^1.11.0"
serde = "^1.0.130"
serde_json = "1.0.67"
